# skiddo-bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/bot/: main.rs  mod.rs  proxy.rs
src/bot/commands/: debug.rs  eval.rs  mod.rs  spawn.rs
src/bot/events/: mod.rs  ready.rs
src/js_runtime/: macros.rs  main.rs  mod.rs
src/js_runtime/skiddo_instance/: mod.rs
src/js_runtime/skiddo_instance/js/: ext.js  ext.rs
src/js_runtime/skiddo_instance/ops/: eval.rs  init.rs  mod.rs
src/js_runtime/skiddo_manager/: interface.rs  mod.rs
