[package]
name = "skiddo-bot"
version = "0.1.0"
edition = "2021"
default-run = "skiddo-bot"

[[bin]]
name = "skiddo-bot"
path = "src/bot/main.rs"

[[bin]]
name = "skiddo-js-runtime"
path = "src/js_runtime/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
scorched = "0.5.1"
tokio = { version = "1.35.1", features = ["full"] }
