[package]
name = "skiddo-bot"
version = "0.1.0"
edition = "2021"
default-run = "skiddo-bot"

[[bin]]
name = "skiddo-bot"
path = "src/bot/main.rs"

[[bin]]
name = "skiddo-js-runtime"
path = "src/js_runtime/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
deno_core = "0.256.0"
gotham = "0.7.2"
ipc-channel = "0.18.0"
poise = "0.6.1"
scorched = "0.5.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
vfs = { version = "0.10.0" }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
